# oci-semver-tagging

./: Cargo.toml  Dockerfile  LICENSE  README.md
src/: lib.rs  main.rs  partial_semver.rs  tag.rs  validate.rs
tests/: tag_test.rs
